--- a/index.html
+++ b/index.html
@@ -82,8 +82,10 @@
   }
 }
 </script>
+<!-- Optional stylesheet; remove until a real file exists -->
 </head>
 <body>
     <div id="root"></div>
+<script type="module" src="./index.tsx"></script>
 </body>
 </html>
